<resources>
    <string name="app_name">Solar Tracker</string>

    <string name="label_hex">HEX:</string>
    <string name="label_temperature">Color Temp:</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="git_hub_repo_url">https://github.com/RacZo/SolarTracker</string>

    <string name="button_ok">Ok</string>
    <string name="refreshing">Refreshing&#8230;</string>

    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message">An error has occurred while trying to obtain Sun information. Please try again later.</string>

    <string name="lat_lon">Latitude, Longitude:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="solar_noon">Solar Noon:</string>
    <string name="day_length">Day Length:</string>
    <string name="seconds">seconds</string>
    <string name="civil">Civil</string>
    <string name="nautical">Nautical</string>
    <string name="astronomical">Astronomical</string>
    <string name="twilight_begin">Twilight Begin:</string>
    <string name="twilight_end">Twilight End:</string>
    <string name="color_temp">Color Temperature:</string>

    <string name="other">Other</string>
    <string name="solar_information">Solar Information</string>
    <string name="daylight_overcast_color_temp">6,500 K</string>
    <string name="daylight_overcast_hex_string">#FFFFF9FD</string>

</resources>
